load("@rules_python//python:defs.bzl", "py_binary")
load("//tools:openapi_client.bzl", "openapi_client")

# ==============================================================================
# OpenAPI Client Generation
# ==============================================================================
# Clients are generated in external/{namespace}/{app}/ structure
# Import pattern: from external.{namespace}.{app} import ...

# ManMan API Clients
openapi_client(
    name = "manman_experience_api",
    spec = "//manman/src/host:experience_api_spec",
    namespace = "manman",
    app = "experience_api",
    model_files = [
        "current_instance_response",
        "game_server_config",
        "game_server_instance",
        "http_validation_error",
        "stdin_command_request",
        "validation_error",
        "validation_error_loc_inner",
        "worker",
    ],
)

openapi_client(
    name = "manman_status_api",
    spec = "//manman/src/host:status_api_spec",
    namespace = "manman",
    app = "status_api",
    model_files = [
        "external_status_info",
        "http_validation_error",
        "status_type",
        "validation_error",
        "validation_error_loc_inner",
    ],
)

openapi_client(
    name = "manman_worker_dal_api",
    spec = "//manman/src/host:worker_dal_api_spec",
    namespace = "manman",
    app = "worker_dal_api",
    model_files = [
        "game_server",
        "game_server_config",
        "game_server_instance_input",
        "game_server_instance_output",
        "http_validation_error",
        "server_type",
        "validation_error",
        "validation_error_loc_inner",
        "worker",
    ],
)

# Demo API Clients
openapi_client(
    name = "demo_hello_fastapi",
    spec = "//demo/hello_fastapi:hello-fastapi_openapi_spec",
    namespace = "demo",
    app = "hello_fastapi",
    # No model files - demo API has no data models
)

# Convenience target to build all clients
filegroup(
    name = "all_clients",
    srcs = [
        ":manman_experience_api",
        ":manman_status_api",
        ":manman_worker_dal_api",
        ":demo_hello_fastapi",
    ],
    visibility = ["//visibility:public"],
)

# ==============================================================================
# Legacy/Old Client Generation (to be removed)
# ==============================================================================

# Client generation script
py_binary(
    name = "generate_clients",
    srcs = ["//tools:generate_clients.py"],
    main = "//tools:generate_clients.py",
    deps = [
        "//manman/src:manman_core",
        "//manman/src/host:manman_host",
        "//libs/python/openapi_gen:openapi_gen_lib",
    ],
    visibility = ["//visibility:public"],
)

# Convenience target to generate OpenAPI specs
# Points to the targets defined alongside the API implementations
alias(
    name = "generate_specs",
    actual = "//manman/src/host:all_api_specs",
    visibility = ["//visibility:public"],
)

