load("//tools/helm:helm.bzl", "helm_chart")

# Demo applications namespace
#
# Individual release_app definitions for each demo app are in their respective
# directories (hello_python/BUILD.bazel, hello_go/BUILD.bazel, etc.)
#
# For complex multi-app deployments, use helm_chart_composed from 
# helm_composition_simple.bzl like the manman domain does.

# Example Helm chart with a single external API
# Ingress will be automatically enabled for external-api app types
# Configure ingress host and paths in values.yaml when deploying
helm_chart(
    name = "fastapi_chart",
    apps = [
        "//demo/hello_fastapi:hello_fastapi_metadata",
    ],
    chart_name = "hello-fastapi",
    namespace = "demo",
    environment = "production",
    chart_version = "1.0.0",
    visibility = ["//visibility:public"],
)

# Example: Workers only (no ingress)
helm_chart(
    name = "workers_chart",
    apps = [
        "//demo/hello_python:hello_python_metadata",
        "//demo/hello_go:hello_go_metadata",
    ],
    chart_name = "demo-workers",
    namespace = "workers",
    environment = "staging",
    chart_version = "0.2.0",
)

# Example: Internal API (has service but no ingress)
helm_chart(
    name = "internal_api_chart",
    apps = [
        "//demo/hello_internal_api:hello_internal_api_metadata",
    ],
    chart_name = "hello-internal-api",
    namespace = "demo",
    environment = "production",
    chart_version = "1.0.0",
    visibility = ["//visibility:public"],
)

# Example: Worker (no service or ingress, just deployment)
helm_chart(
    name = "worker_chart",
    apps = [
        "//demo/hello_worker:hello_worker_metadata",
    ],
    chart_name = "hello-worker",
    namespace = "demo",
    environment = "production",
    chart_version = "1.0.0",
    visibility = ["//visibility:public"],
)

# Example: Job (pre-install hook, no deployment)
helm_chart(
    name = "job_chart",
    apps = [
        "//demo/hello_job:hello_job_metadata",
    ],
    chart_name = "hello-job",
    namespace = "demo",
    environment = "production",
    chart_version = "1.0.0",
    visibility = ["//visibility:public"],
)

# Example: Multi-app chart with all types
helm_chart(
    name = "multi_app_chart",
    apps = [
        "//demo/hello_fastapi:hello_fastapi_metadata",
        "//demo/hello_internal_api:hello_internal_api_metadata",
        "//demo/hello_worker:hello_worker_metadata",
        "//demo/hello_job:hello_job_metadata",
    ],
    chart_name = "demo-all-types",
    namespace = "demo",
    environment = "production",
    chart_version = "1.0.0",
    visibility = ["//visibility:public"],
)
