load("//tools:release.bzl", "release_helm_chart")

# Demo applications namespace
#
# Individual release_app definitions for each demo app are in their respective
# directories (hello_python/BUILD.bazel, hello_go/BUILD.bazel, etc.)
#
# For complex multi-app deployments, use helm_chart_composed from 
# helm_composition_simple.bzl like the manman domain does.

# Example Helm chart with a single external API
# Ingress will be automatically enabled for external-api app types
# Configure ingress host and paths in values.yaml when deploying
release_helm_chart(
    name = "fastapi_chart",
    apps = [
        "//demo/hello_fastapi:hello_fastapi_metadata",
    ],
    chart_name = "hello-fastapi",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-hello-fastapi.v*)
    visibility = ["//visibility:public"],
)

# Example: FastAPI with manual Kubernetes manifests (ConfigMap, NetworkPolicy)
release_helm_chart(
    name = "fastapi_with_manifests_chart",
    apps = [
        "//demo/hello_fastapi:hello_fastapi_metadata",
    ],
    manual_manifests = [
        "//demo/hello_fastapi:k8s_manifests",
    ],
    chart_name = "hello-fastapi-enhanced",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-hello-fastapi-enhanced.v*)
    visibility = ["//visibility:public"],
)

# Example: Workers only (no ingress)
release_helm_chart(
    name = "workers_chart",
    apps = [
        "//demo/hello_python:hello_python_metadata",
        "//demo/hello_go:hello_go_metadata",
    ],
    chart_name = "demo-workers",
    namespace = "workers",
    environment = "staging",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-demo-workers.v*)
)

# Example: Internal API (has service but no ingress)
# Example: Internal API (has service but no ingress)
release_helm_chart(
    name = "internal_api_chart",
    apps = [
        "//demo/hello_internal_api:hello_internal_api_metadata",
    ],
    chart_name = "hello-internal-api",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-hello-internal-api.v*)
)

# Example: Cron job
release_helm_chart(
    name = "job_chart",
    apps = [
        "//demo/hello_job:hello_job_metadata",
    ],
    chart_name = "hello-job",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-hello-job.v*)
)

# Example: Background worker
release_helm_chart(
    name = "worker_chart",
    apps = [
        "//demo/hello_worker:hello_worker_metadata",
    ],
    chart_name = "hello-worker",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-hello-worker.v*)
)

# Example: All app types in one chart
release_helm_chart(
    name = "all_types_chart",
    apps = [
        "//demo/hello_fastapi:hello_fastapi_metadata",
        "//demo/hello_internal_api:hello_internal_api_metadata",
        "//demo/hello_worker:hello_worker_metadata",
        "//demo/hello_job:hello_job_metadata",
    ],
    chart_name = "demo-all-types",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-demo-all-types.v*)
)
