load("//tools:release.bzl", "release_helm_chart")

# Tilt configuration for demo apps
filegroup(
    name = "tilt_config",
    srcs = [
        "Tiltfile",
        ".env.example",
    ],
    visibility = ["//visibility:public"],
)

# Demo applications namespace
#
# Individual release_app definitions for each demo app are in their respective
# directories (hello_python/BUILD.bazel, hello_go/BUILD.bazel, etc.)
#
# For complex multi-app deployments, use helm_chart_composed from 
# helm_composition_simple.bzl like the manman domain does.

# Example Helm chart with a single external API
# Ingress will be automatically enabled for external-api app types
# Configure ingress host and paths in values.yaml when deploying
release_helm_chart(
    name = "fastapi_chart",
    apps = [
        "//demo/hello_fastapi:hello-fastapi_metadata",
    ],
    chart_name = "hello-fastapi",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-demo-hello-fastapi.v*)
    visibility = ["//visibility:public"],
)

# Example: FastAPI with manual Kubernetes manifests (ConfigMap, NetworkPolicy)
release_helm_chart(
    name = "fastapi_with_manifests_chart",
    apps = [
        "//demo/hello_fastapi:hello-fastapi_metadata",
    ],
    manual_manifests = [
        "//demo/hello_fastapi:k8s_manifests",
    ],
    chart_name = "hello-fastapi-enhanced",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-demo-hello-fastapi-enhanced.v*)
    visibility = ["//visibility:public"],
)

# Example: Workers only (no ingress)
release_helm_chart(
    name = "workers_chart",
    apps = [
        "//demo/hello_python:hello-python_metadata",
        "//demo/hello_go:hello-go_metadata",
    ],
    chart_name = "demo-workers",
    namespace = "workers",
    environment = "staging",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-workers-demo-workers.v*)
)

# Example: Internal API (has service but no ingress)
# Example: Internal API (has service but no ingress)
release_helm_chart(
    name = "internal_api_chart",
    apps = [
        "//demo/hello_internal_api:hello-internal-api_metadata",
    ],
    chart_name = "hello-internal-api",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-demo-hello-internal-api.v*)
)

# Example: Cron job
release_helm_chart(
    name = "job_chart",
    apps = [
        "//demo/hello_job:hello-job_metadata",
    ],
    chart_name = "hello-job",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-demo-hello-job.v*)
)

# Example: Background worker
release_helm_chart(
    name = "worker_chart",
    apps = [
        "//demo/hello_worker:hello-worker_metadata",
    ],
    chart_name = "hello-worker",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-demo-hello-worker.v*)
)

# Example: All app types in one chart
release_helm_chart(
    name = "all_types_chart",
    apps = [
        "//demo/hello_fastapi:hello-fastapi_metadata",
        "//demo/hello_internal_api:hello-internal-api_metadata",
        "//demo/hello_worker:hello-worker_metadata",
        "//demo/hello_job:hello-job_metadata",
    ],
    chart_name = "demo-all-types",
    namespace = "demo",
    environment = "production",
    domain = "demo",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-demo-demo-all-types.v*)
)
