load("//tools/bazel:release.bzl", "release_app", "release_helm_chart")

package(default_visibility = ["//visibility:public"])

alias(
    name = "fcm_lib",
    actual = "//friendly_computing_machine/src:fcm_lib",
)

alias(
    name = "fcm_cli",
    actual = "//friendly_computing_machine/src:fcm_cli",
)

filegroup(
    name = "docs",
    srcs = glob(
        ["docs/**/*"],
        allow_empty = True,
    ),
)

filegroup(
    name = "tests",
    srcs = glob(
        ["tests/**/*"],
        allow_empty = True,
    ),
)

release_app(
    name = "bot",
    app_type = "worker",
    args = [
        "bot",
        "--log-otlp",
        "run-slack-socket-app",
        "--skip-migration-check",
    ],
    binary_name = "//friendly_computing_machine/src:fcm_cli",
    description = "Slack Socket Mode bot for Friendly Computing Machine",
    domain = "friendly-computing-machine",
    health_check_enabled = False,
    language = "python",
    port = 7654,
    replicas = 1,
)

release_app(
    name = "taskpool",
    app_type = "worker",
    args = [
        "bot",
        "--log-otlp",
        "run-taskpool",
        "--skip-migration-check",
    ],
    binary_name = "//friendly_computing_machine/src:fcm_cli",
    description = "Background task pool for Friendly Computing Machine",
    domain = "friendly-computing-machine",
    health_check_enabled = False,
    language = "python",
    port = 7654,
    replicas = 1,
)

release_app(
    name = "subscribe",
    app_type = "worker",
    args = [
        "subscribe",
        "--log-otlp",
        "run",
        "--skip-migration-check",
    ],
    binary_name = "//friendly_computing_machine/src:fcm_cli",
    description = "RabbitMQ subscriber for ManMan status notifications",
    domain = "friendly-computing-machine",
    health_check_enabled = False,
    language = "python",
    port = 7654,
    replicas = 1,
)

release_app(
    name = "worker",
    app_type = "worker",
    args = [
        "workflow",
        "--log-otlp",
        "run",
        "--skip-migration-check",
    ],
    binary_name = "//friendly_computing_machine/src:fcm_cli",
    description = "Temporal worker for Friendly Computing Machine",
    domain = "friendly-computing-machine",
    health_check_enabled = False,
    language = "python",
    port = 7654,
    replicas = 1,
)

release_app(
    name = "migration",
    app_type = "job",
    args = [
        "migration",
        "--log-otlp",
        "run",
    ],
    binary_name = "//friendly_computing_machine/src:fcm_cli",
    description = "Database migration job for Friendly Computing Machine",
    domain = "friendly-computing-machine",
    language = "python",
    replicas = 1,
)

# ==============================================================================
# Helm Chart Composition
# ==============================================================================

# List of all FCM app metadata targets for chart composition
FCM_APPS = [
    ":bot_metadata",
    ":taskpool_metadata",
    ":subscribe_metadata",
    ":worker_metadata",
    ":migration_metadata",
]

# Helm chart composition - combines all FCM services into a single chart
# This is registered with the release system for CI/CD integration
release_helm_chart(
    name = "fcm_chart",
    apps = FCM_APPS,
    chart_name = "bot-services",
    domain = "friendly-computing-machine",
    environment = "dev",
    namespace = "fcm",
    visibility = ["//visibility:public"],
)
