load("@rules_go//go:def.bzl", "go_binary", "go_test")
load("//tools:oci.bzl", "go_oci_image", "go_oci_image_multiplatform")

go_binary(
    name = "hello_go",
    srcs = ["main.go"],
    deps = ["//libs/go"],
    visibility = ["//visibility:public"],
)

# OCI images for the Go application using generic rules
# Creates hello_go_image (amd64), hello_go_image_amd64, and hello_go_image_arm64
go_oci_image_multiplatform(
    name = "hello_go_image", 
    binary = ":hello_go",
    repo_tag = "hello_go:latest",
)

go_test(
    name = "main_test",
    srcs = ["main_test.go"],
    deps = ["//libs/go"],
)
