load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@everything_pip_deps//:requirements.bzl", "requirement")
load("//tools:release.bzl", "release_app")

py_library(
    name = "main_lib",
    srcs = ["__init__.py", "main.py"],
    deps = ["//libs/python"],
    visibility = ["//hello_python:__pkg__"],
)

py_binary(
    name = "hello_python",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":main_lib",
        "//libs/python",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_main",
    srcs = ["test_main.py"],
    deps = [
        ":main_lib",
        requirement("pytest"),
    ],
)

# Release metadata and OCI images for this app
release_app(
    name = "hello_python",
    binary_target = ":hello_python",
    language = "python",
    description = "Python hello world application with pytest",
)
