load("@rules_python//python:defs.bzl", "py_library")
load("//tools:release.bzl", "release_app", "release_helm_chart")

# Re-export all manman modules for convenience
py_library(
    name = "manman",
    visibility = ["//visibility:public"],
    deps = [
        "//manman/src:manman_core",
        "//manman/src/host:manman_host",
        "//manman/src/worker:manman_worker",
        "//manman/src/repository:manman_repository",
        "//manman/src/migrations:manman_migrations",
    ],
)

# Release configurations for manman services
release_app(
    name = "experience_api",
    binary_name = "//manman/src/host:experience_api",
    language = "python",
    domain = "manman",
    description = "Experience API service for managing user experiences and workflows",
    replicas = 1,  # Single replica for development
    ingress_host = "experience.manman.local",
    ingress_tls_secret = "manman-tls",
)

release_app(
    name = "status_api", 
    binary_name = "//manman/src/host:status_api",
    language = "python",
    domain = "manman",
    description = "Status API service for monitoring and health checks",
    replicas = 1,  # Single replica for development
)

release_app(
    name = "worker_dal_api",
    binary_name = "//manman/src/host:worker_dal_api", 
    language = "python",
    domain = "manman",
    description = "Worker DAL API service for data access layer operations",
    replicas = 1,  # Single replica for development
    ingress_host = "dal.manman.local",
    ingress_tls_secret = "manman-tls",
)

release_app(
    name = "status_processor",
    binary_name = "//manman/src/host:status_processor",
    language = "python", 
    domain = "manman",
    description = "Status processor service for background status processing",
    replicas = 1,  # Single replica for development
)

release_app(
    name = "worker",
    binary_name = "//manman/src/worker:worker",
    language = "python",
    domain = "manman", 
    description = "Background worker service for processing tasks and messages",
    replicas = 1,  # Single replica for development
)

release_app(
    name = "migration",
    binary_name = "//manman/src/host:migration",
    language = "python",
    domain = "manman",
    description = "Database migration job for schema updates",
    replicas = 1,  # Jobs always run once
)

# List of all manman app metadata targets for chart composition
# Update this list when adding or removing services
MANMAN_APPS = [
    ":experience_api_metadata",
    ":status_api_metadata",
    ":worker_dal_api_metadata",
    ":status_processor_metadata",
    ":worker_metadata",
    ":migration_metadata",
]

# Helm chart composition - combines all manman services into a single chart
# This is registered with the release system for CI/CD integration
# Chart tags will use the format: helm-manman-host.vX.Y.Z to avoid collision with app tags
release_helm_chart(
    name = "manman_chart",
    apps = MANMAN_APPS,
    chart_name = "host-services",
    namespace = "manman",
    environment = "dev",
    domain = "manman",
    # chart_version omitted - uses default "0.0.0-dev" for local builds
    # Release system auto-versions from git tags (helm-manman-host.v*)
    visibility = ["//visibility:public"],
)

# Note: Manual helm charts are provided in manman/charts/manman-host/
# Those charts offer more sophisticated configuration for production deployments

filegroup(
    name = "tiltfile",
    srcs = ["Tiltfile"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "charts", 
    srcs = glob(["charts/**/*"], allow_empty = True),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "design_docs",
    srcs = glob(["design/**/*"]),
    visibility = ["//visibility:public"],
)
